# graduateWork

./: .gitignore  CMakeLists.txt
C3D/: .gitignore
Qt/: CMakeLists.txt
Qt/60_AssemblySolver/: BuildMathModel.h  Build_Assembly.cpp  CMakeLists.txt  MPU1.cpp  MPU2.cpp  MPU3.cpp  assemblysolver.cpp  assemblywidget.cpp  assemblywidget.h  main.cpp  prbase.cpp  prbase.h  prbinconstraint.cpp  prbinconstraint.h  prinsertItem.cpp  prinsertItem.h  prrotation.cpp  prrotation.h  reporter.cpp  reporter.h
Qt/60_AssemblySolver/details/: MPST.001.001_ТрубаТеплообменная.cpp  MPST.001.002_ТрубаКожуховая.cpp  MPST.001.003_Опора.cpp  MPST.001.004_РешеткаКожуховыхТруб.cpp  MPST.001.005_Камера.cpp  MPST.001.006_РешеткаТеплообменныхТруб.cpp  MPST.001.007_ФланецКожух.cpp  MPST.001.008_ФланецСпециальный.cpp  MPST.001.009_ТрубаИзгиб.cpp
QtVision/Include/: qt_openglwidget.h
QtVision/src/: qt_openglwidget.cpp
